digital lock in

--- a/mag_mapping.ipynb
+++ b/mag_mapping.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import os\n",
     "from scipy import interpolate as interp\n",
     "from scipy.signal import spectrogram\n",
     "import utm"
@@ -16,14 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# only first third of this particular dataset was useful, normally none of this should be sliced!!!!!!!!!\n",
     "\n",
-    "mag_path = 'data/mag_data.csv'\n",
-    "gps_path = 'data/gps.csv'\n",
+    "mag_path = 'data/mag_engi_4-18.csv'\n",
+    "gps_path = 'data/gps_engi_4-18.csv'\n",
     "\n",
     "# magnetic coil data acquisition sampling rate\n",
     "sample_rate = int(1e4)\n",
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -264,6 +265,22 @@
     "plt.axis('equal')\n",
     "plt.grid(True)\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logname = \"arcgis_data.csv\"\n",
+    "path = os.path.expanduser('data/'+logname)\n",
+    "logfile = open(path, \"w\")\n",
+    "logfile.write(\"Times (s),GPS Lat,GPS Lon,Ch 1 Voltage (V),Ch 2 Voltage (V),Phase\\n\")\n",
+    "for i in range(len(gps_times)):\n",
+    "        logfile.write(f\"{gps_times[i]},{gps_lat[i]},{gps_lon[i]},\\\n",
+    "                        {mag_ch1_voltages_at_gps_coords[i]:.7f},{mag_ch2_voltages_at_gps_coords[i]:.7f},{mag_field_phase[i]:.7f}\\n\")\n",
+    "logfile.close()"
    ]
   }
  ],
