--- a/mag_mapping.ipynb
+++ b/mag_mapping.ipynb
@@ -75,8 +75,13 @@
     "\n",
     "# Interpolate fundamental frequency mag data to gps coords\n",
     "mag_ch1_fundamental_envelope = get_harmonic_envelope(mag_ch1_ac_voltages, sample_rate, mag_primary_ac_voltages, driving_frequency, 1)[2]\n",
+    "mag_ch1_fundamental_envelope = mag_ch1_fundamental_envelope - np.mean(mag_ch1_fundamental_envelope)\n",
     "mag_ch1_fundamental_envelope_interp = interp.interp1d(mag_times, mag_ch1_fundamental_envelope, kind='cubic', fill_value='extrapolate')\n",
-    "mag_ch1_fundamental_envelope_at_gps_coords = mag_ch1_fundamental_envelope_interp(gps_times)"
+    "mag_ch1_fundamental_envelope_at_gps_coords = mag_ch1_fundamental_envelope_interp(gps_times)\n",
+    "mag_ch2_fundamental_envelope = get_harmonic_envelope(mag_ch2_ac_voltages, sample_rate, mag_primary_ac_voltages, driving_frequency, 1)[2]\n",
+    "mag_ch2_fundamental_envelope = mag_ch2_fundamental_envelope - np.mean(mag_ch2_fundamental_envelope)\n",
+    "mag_ch2_fundamental_envelope_interp = interp.interp1d(mag_times, mag_ch2_fundamental_envelope, kind='cubic', fill_value='extrapolate')\n",
+    "mag_ch2_fundamental_envelope_at_gps_coords = mag_ch2_fundamental_envelope_interp(gps_times)"
    ]
   },
   {
@@ -114,6 +119,123 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Cutting out the turns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slice_indices = [(27,47), (65,85), (95,115), (130,150), (157,177), (185,205), (214,234), (235,245), \\\n",
+    "                 (245,365), (285,305), (320,340), (357,377), (395,415), (435,455), (475,495)]\n",
+    "\n",
+    "mag_ch1_fundamental_envelope_sliced = np.copy(mag_ch1_fundamental_envelope)\n",
+    "mag_ch1_fundamental_envelope_at_gps_coords_sliced = np.copy(mag_ch1_fundamental_envelope_at_gps_coords)\n",
+    "mag_ch2_fundamental_envelope_sliced = np.copy(mag_ch2_fundamental_envelope)\n",
+    "mag_ch2_fundamental_envelope_at_gps_coords_sliced = np.copy(mag_ch2_fundamental_envelope_at_gps_coords)\n",
+    "\n",
+    "for i,indices in enumerate(slice_indices):\n",
+    "    mag_ch1_fundamental_envelope_sliced[int(indices[0]*sample_rate):int(indices[1]*sample_rate)] = 0\n",
+    "    mag_ch1_fundamental_envelope_at_gps_coords_sliced[indices[0]:indices[1]] = 0\n",
+    "    #mag_ch2_fundamental_envelope_sliced[int(indices[0]*sample_rate):int(indices[1]*sample_rate)] = 0\n",
+    "    #mag_ch2_fundamental_envelope_at_gps_coords_sliced[indices[0]:indices[1]] = 0\n",
+    "    \n",
+    "mag_ch2_fundamental_envelope_sliced[int(165*sample_rate):int(240*sample_rate)] = 0\n",
+    "mag_ch2_fundamental_envelope_at_gps_coords_sliced[165:240] = 0\n",
+    "mag_ch2_fundamental_envelope_sliced[int(445*sample_rate):int(490*sample_rate)] = 0\n",
+    "mag_ch2_fundamental_envelope_at_gps_coords_sliced[445:490] = 0\n",
+    "\n",
+    "fig = go.Figure()\n",
+    "fig.add_trace(go.Scatter(\n",
+    "    x= mag_times[1000:-1000],\n",
+    "    y= mag_ch1_fundamental_envelope_sliced[1000:-1000],   \n",
+    "    mode='lines', \n",
+    "    name='Ch 1 Fundamental Envelope (Turns Excluded)',\n",
+    "    line=dict(color='royalblue', width=2)\n",
+    "))\n",
+    "fig.add_trace(go.Scatter(\n",
+    "    x= mag_times[1000:-1000],\n",
+    "    y= mag_ch1_fundamental_envelope[1000:-1000],   \n",
+    "    mode='lines', \n",
+    "    name='Ch 1 Fundamental Envelope',\n",
+    "    line=dict(color='rebeccapurple', width=2)\n",
+    "))\n",
+    "fig.update_layout(\n",
+    "    title='Ch 1 Fundamental Envelope vs. Time',\n",
+    "    xaxis_title='Time (s)',\n",
+    "    yaxis_title='Voltage (V)',\n",
+    "    template='plotly_dark',\n",
+    "    hovermode='x unified',\n",
+    ")\n",
+    "fig.show()\n",
+    "\n",
+    "mag_map = plt.scatter(x=utm_lat[10:-10]%1000, y=utm_lon[10:-10]%1000, c=mag_ch1_fundamental_envelope_at_gps_coords_sliced[10:-10], cmap='viridis')\n",
+    "plt.colorbar(mag_map, label='Voltage (V)')\n",
+    "plt.xlabel('Latitude (m)')\n",
+    "plt.ylabel('Longitude (m)')\n",
+    "plt.title('Ch 1 Fundamental Envelope Map (Turns Excluded)')\n",
+    "plt.axis('equal')\n",
+    "plt.grid(True)\n",
+    "plt.show()\n",
+    "\n",
+    "mag_map = plt.scatter(x=utm_lat[10:-10]%1000, y=utm_lon[10:-10]%1000, c=mag_ch1_fundamental_envelope_at_gps_coords[10:-10], cmap='viridis')\n",
+    "plt.colorbar(mag_map, label='Voltage (V)')\n",
+    "plt.xlabel('Latitude (m)')\n",
+    "plt.ylabel('Longitude (m)')\n",
+    "plt.title('Ch 1 Fundamental Envelope Map')\n",
+    "plt.axis('equal')\n",
+    "plt.grid(True)\n",
+    "plt.show()\n",
+    "\n",
+    "fig = go.Figure()\n",
+    "fig.add_trace(go.Scatter(\n",
+    "    x= mag_times[1000:-1000],\n",
+    "    y= mag_ch2_fundamental_envelope_sliced[1000:-1000],   \n",
+    "    mode='lines', \n",
+    "    name='Ch 1 Fundamental Envelope (Turns Excluded)',\n",
+    "    line=dict(color='royalblue', width=2)\n",
+    "))\n",
+    "fig.add_trace(go.Scatter(\n",
+    "    x= mag_times[1000:-1000],\n",
+    "    y= mag_ch2_fundamental_envelope[1000:-1000],   \n",
+    "    mode='lines', \n",
+    "    name='Ch 1 Fundamental Envelope',\n",
+    "    line=dict(color='rebeccapurple', width=2)\n",
+    "))\n",
+    "fig.update_layout(\n",
+    "    title='Ch 2 Fundamental Envelope vs. Time',\n",
+    "    xaxis_title='Time (s)',\n",
+    "    yaxis_title='Voltage (V)',\n",
+    "    template='plotly_dark',\n",
+    "    hovermode='x unified',\n",
+    ")\n",
+    "fig.show()\n",
+    "\n",
+    "mag_map = plt.scatter(x=utm_lat[10:-10]%1000, y=utm_lon[10:-10]%1000, c=mag_ch2_fundamental_envelope_at_gps_coords_sliced[10:-10], cmap='viridis')\n",
+    "plt.colorbar(mag_map, label='Voltage (V)')\n",
+    "plt.xlabel('Latitude (m)')\n",
+    "plt.ylabel('Longitude (m)')\n",
+    "plt.title('Ch 2 Fundamental Envelope Map (Turns Excluded)')\n",
+    "plt.axis('equal')\n",
+    "plt.grid(True)\n",
+    "plt.show()\n",
+    "\n",
+    "# mag_map = plt.scatter(x=utm_lat[10:-10]%1000, y=utm_lon[10:-10]%1000, c=mag_ch2_fundamental_envelope_at_gps_coords[10:-10], cmap='viridis')\n",
+    "# plt.colorbar(mag_map, label='Voltage (V)')\n",
+    "# plt.xlabel('Latitude (m)')\n",
+    "# plt.ylabel('Longitude (m)')\n",
+    "# plt.title('Ch 2 Fundamental Envelope Map')\n",
+    "# plt.axis('equal')\n",
+    "# plt.grid(True)\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Mapping of Secondary Coil Voltages and Complex Field Phase"
    ]
   },
@@ -123,6 +245,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "mag_map = plt.scatter(x=utm_lat[10:-10]%1000, y=utm_lon[10:-10]%1000, c=mag_ch1_fundamental_envelope_at_gps_coords[10:-10], cmap='viridis')\n",
+    "plt.colorbar(mag_map, label='Voltage (V)')\n",
+    "plt.xlabel('Latitude (m)')\n",
+    "plt.ylabel('Longitude (m)')\n",
+    "plt.title('Ch 1 Fundamental Envelope Map')\n",
+    "plt.axis('equal')\n",
+    "plt.grid(True)\n",
+    "plt.show()\n",
+    "\n",
     "mag_map = plt.scatter(x=utm_lat[10:-10]%1000, y=utm_lon[10:-10]%1000, c=mag_ch1_fundamental_envelope_at_gps_coords[10:-10], cmap='viridis')\n",
     "plt.colorbar(mag_map, label='Voltage (V)')\n",
     "plt.xlabel('Latitude (m)')\n",
