added chirp and frequency comb to wave gen script

--- a/mag_mapping.ipynb
+++ b/mag_mapping.ipynb
@@ -14,13 +14,13 @@
     "import os\n",
     "from scipy import interpolate as interp\n",
     "from scipy.signal import spectrogram, firwin, filtfilt, hilbert\n",
-    "from utilities.signal_analysis_methods import get_harmonic_envelope, get_total_envelope\n",
+    "from utilities.signal_analysis_utils import get_harmonic_envelope, get_total_envelope\n",
     "import utm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
