debugging secondary coil acquisition

--- a/mag_mapping.ipynb
+++ b/mag_mapping.ipynb
@@ -24,28 +24,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mag_path = 'data/mag_engi_7-3-25.csv'\n",
-    "gps_path = 'data/gps_engi_7-3-25.csv'\n",
+    "mag_path = 'data/mag.csv'\n",
+    "gps_path = 'data/gps.csv'\n",
     "\n",
     "# Magnetic secondary coil data acquisition rate and primary coil driving frequency\n",
     "sample_rate = int(2e3) # in [Hz]\n",
     "driving_frequency = 100 # in [Hz]\n",
     "\n",
     "mag_data = pd.read_csv(mag_path)\n",
-    "mag_times = mag_data['Times (s)'].to_numpy()[:sample_rate*500]\n",
-    "mag_ch1_voltages = mag_data['Secondary Ch 1 Voltage (V)'].to_numpy()[:sample_rate*500]\n",
-    "mag_ch2_voltages = mag_data['Secondary Ch 2 Voltage (V)'].to_numpy()[:sample_rate*500]\n",
-    "mag_primary_voltages = mag_data['Primary Voltage (V)'].to_numpy()[:sample_rate*500]\n",
+    "mag_times = mag_data['Times (s)'].to_numpy()\n",
+    "mag_ch1_voltages = mag_data['Ch 1 (V)'].to_numpy()\n",
+    "mag_ch2_voltages = mag_data['Ch 2 (V)'].to_numpy()\n",
+    "mag_primary_voltages = mag_data['Primary (V)'].to_numpy()\n",
     "# AC voltages computed by subtracting means from raw voltages\n",
     "mag_ch1_ac_voltages = mag_ch1_voltages-np.mean(mag_ch1_voltages)\n",
     "mag_ch2_ac_voltages = mag_ch2_voltages-np.mean(mag_ch2_voltages)\n",
     "mag_primary_ac_voltages = mag_primary_voltages-np.mean(mag_primary_voltages)\n",
     "\n",
     "gps_data = pd.read_csv(gps_path)\n",
-    "gps_times = gps_data['Times (s)'].to_numpy()[:500]\n",
-    "gps_lat = gps_data['Latitude'].to_numpy()[:500]\n",
-    "gps_lon = gps_data['Longitude'].to_numpy()[:500]\n",
-    "gps_headings = gps_data['Heading'].to_numpy()[:500]\n",
+    "gps_times = gps_data['Times (s)'].to_numpy()\n",
+    "gps_lat = gps_data['Latitude'].to_numpy()\n",
+    "gps_lon = gps_data['Longitude'].to_numpy()\n",
+    "gps_headings = gps_data['Heading'].to_numpy()\n",
     "# Conversion from GPS global latitude and longitude to UTM latitude and longitude (in [m])\n",
     "utm_lat, utm_lon, zone_num, zone_letter = utm.from_latlon(gps_lat, gps_lon)"
    ]
