integrated MEDA mag recording into workflow with bash script

--- a/signal_analysis.ipynb
+++ b/signal_analysis.ipynb
@@ -12,7 +12,7 @@
     "import plotly.graph_objects as go\n",
     "import chart_studio.plotly as ply\n",
     "from scipy.signal import spectrogram\n",
-    "from utilities.signal_analysis_utils import autocorrelation, autocorrelation_slow"
+    "from utilities.signal_analysis_utils import autocorrelation"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = 'data/mag_chirp_static_engi_08-19-25.csv'\n",
+    "path = 'data/mag.csv'\n",
     "data = pd.read_csv(path)\n",
     "\n",
     "sample_rate = int(2e3)\n",
