added log statement to MEDA script

--- a/signal_analysis.ipynb
+++ b/signal_analysis.ipynb
@@ -26,6 +26,7 @@
     "\n",
     "sample_rate = int(2e3)\n",
     "times = data['Times (s)'].to_numpy()\n",
+    "times = times - times[0]\n",
     "primary_voltages = data['Primary (V)'].to_numpy()\n",
     "ch1_voltages = data['Ch 1 (V)'].to_numpy()\n",
     "ch2_voltages = data['Ch 2 (V)'].to_numpy()\n",
@@ -144,7 +145,7 @@
     "    template='plotly_dark',\n",
     "    hovermode='x unified'\n",
     ")\n",
-    "fig.update_xaxes(range=[0, 200])\n",
+    "fig.update_xaxes(range=[0, 500])\n",
     "fig.show()\n",
     "\n",
     "fig = go.Figure(data=go.Scatter(\n",
@@ -161,7 +162,7 @@
     "    template='plotly_dark',\n",
     "    hovermode='x unified'\n",
     ")\n",
-    "fig.update_xaxes(range=[0, 200])\n",
+    "fig.update_xaxes(range=[0, 500])\n",
     "fig.show()"
    ]
   },
@@ -223,7 +224,7 @@
     "    coloraxis_colorbar=dict(title='Power (dB)'),\n",
     "    template='plotly_dark'\n",
     ")\n",
-    "fig.update_xaxes(range=[0, 45])\n",
+    "#fig.update_xaxes(range=[0, 45])\n",
     "fig.show()\n",
     "\n",
     "frequencies, times, Sxx = spectrogram(ch2_AC_voltages, fs=sample_rate, nperseg=1024)\n",
@@ -244,19 +245,6 @@
     ")\n",
     "#.update_xaxes(range=[0, 45])\n",
     "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- check for ground loops in wiring (maybe due to added coax connector for primary?)\n",
-    "- make grounds diagram (identify number of loops)\n",
-    "- bundle cables better\n",
-    "- reproduce turn issue in lab\n",
-    "- try with and without primary coax connected\n",
-    "- compare data to last time (noise floor, etc.)\n",
-    "- could be neg side of output from power amp to check if its a ground (check with dvm, with primary measurement coax disonnected)"
    ]
   }
  ],
