changed logging format for MEDA script

--- a/signal_analysis.ipynb
+++ b/signal_analysis.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = 'data/mag.csv'\n",
+    "path = 'data/mag_steel.csv'\n",
     "data = pd.read_csv(path)\n",
     "\n",
     "sample_rate = int(2e3)\n",
@@ -44,13 +44,53 @@
    "source": [
     "fig = go.Figure()\n",
     "\n",
+    "# fig.add_trace(go.Scatter(\n",
+    "#     x= times,\n",
+    "#     y= primary_AC_voltages, \n",
+    "#     mode='lines', \n",
+    "#     name='Primary',\n",
+    "#     line=dict(color='tomato', width=2)\n",
+    "# ))\n",
     "fig.add_trace(go.Scatter(\n",
     "    x= times,\n",
-    "    y= primary_AC_voltages, \n",
+    "    y= ch1_AC_voltages, \n",
     "    mode='lines', \n",
-    "    name='Primary',\n",
-    "    line=dict(color='tomato', width=2)\n",
+    "    name='Channel 1',\n",
+    "    line=dict(color='rebeccapurple', width=2)\n",
     "))\n",
+    "fig.add_trace(go.Scatter(\n",
+    "    x= times,\n",
+    "    y= ch2_AC_voltages, \n",
+    "    mode='lines', \n",
+    "    name='Channel 2',\n",
+    "    line=dict(color='royalblue', width=2)\n",
+    "))\n",
+    "fig.update_layout(\n",
+    "    title='Secondary Coil Voltages',\n",
+    "    xaxis_title='Time (s)',\n",
+    "    yaxis_title='Voltage (V)',\n",
+    "    template='plotly_dark',\n",
+    "    hovermode='x unified'\n",
+    ")\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = go.Figure()\n",
+    "\n",
+    "# fig.add_trace(go.Scatter(\n",
+    "#     x= times,\n",
+    "#     y= primary_AC_voltages, \n",
+    "#     mode='lines', \n",
+    "#     name='Primary',\n",
+    "#     line=dict(color='tomato', width=2)\n",
+    "# ))\n",
     "fig.add_trace(go.Scatter(\n",
     "    x= times,\n",
     "    y= ch1_AC_voltages, \n",
@@ -116,6 +156,54 @@
     "    template='plotly_dark',\n",
     "    hovermode='x unified'\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "ch1_fft = np.fft.rfft(ch1_AC_voltages)\n",
+    "ch1_fftfreq = np.fft.rfftfreq(len(ch1_AC_voltages),1./sample_rate)\n",
+    "\n",
+    "ch2_fft = np.fft.rfft(ch2_AC_voltages)\n",
+    "ch2_fftfreq = np.fft.rfftfreq(len(ch2_AC_voltages),1./sample_rate)\n",
+    "\n",
+    "fig = go.Figure(data=go.Scatter(\n",
+    "    x= ch1_fftfreq,\n",
+    "    y= np.log(np.abs(ch1_fft)), \n",
+    "    mode='lines', \n",
+    "    name='Channel 1',\n",
+    "    line=dict(color='rebeccapurple', width=2)\n",
+    "))\n",
+    "fig.update_layout(\n",
+    "    title='Secondary Coil Frequency Spectrum (Channel 1)',\n",
+    "    xaxis_title='Frequency (Hz)',\n",
+    "    yaxis_title='Power',\n",
+    "    template='plotly_dark',\n",
+    "    hovermode='x unified'\n",
+    ")\n",
+    "fig.update_xaxes(range=[0, 500])\n",
+    "fig.show()\n",
+    "\n",
+    "fig = go.Figure(data=go.Scatter(\n",
+    "    x= ch2_fftfreq,\n",
+    "    y= np.log(np.abs(ch2_fft)), \n",
+    "    mode='lines', \n",
+    "    name='Channel 2',\n",
+    "    line=dict(color='royalblue', width=2)\n",
+    "))\n",
+    "fig.update_layout(\n",
+    "    title='Secondary Coil Frequency Spectrum (Channel 2)',\n",
+    "    xaxis_title='Frequency (Hz)',\n",
+    "    yaxis_title='Power',\n",
+    "    template='plotly_dark',\n",
+    "    hovermode='x unified'\n",
+    ")\n",
+    "fig.update_xaxes(range=[0, 500])\n",
+    "fig.show()"
    ]
   },
   {
